--- a/prod/index.html
+++ b/prod/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/0a5eb17cd5d9a87b-s.p.woff" crossorigin="" type="font/woff">
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/33112a1a3babe854-s.p.woff" crossorigin="" type="font/woff">
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/60964256366d74f2-s.p.woff" crossorigin="" type="font/woff">
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/7d16627dbfbbee5d-s.p.woff" crossorigin="" type="font/woff">
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/87cbde00c95e8478-s.p.woff" crossorigin="" type="font/woff">
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/ce9abbd2222b7882-s.p.woff" crossorigin="" type="font/woff">
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/e86cc954d8c82a89-s.p.woff" crossorigin="" type="font/woff">
-    <link rel="preload" as="font" href="https://melborp.s3.us-east-2.amazonaws.com/assets/fonts/ee0063ed4c3236ca-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/0a5eb17cd5d9a87b-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/33112a1a3babe854-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/60964256366d74f2-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/7d16627dbfbbee5d-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/87cbde00c95e8478-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/ce9abbd2222b7882-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/e86cc954d8c82a89-s.p.woff" crossorigin="" type="font/woff">
+    <link rel="preload" as="font" href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/fonts/ee0063ed4c3236ca-s.p.woff" crossorigin="" type="font/woff">
     
     <title>ASULADO - INICIO</title>
 
@@ -30,14 +30,14 @@
     <meta property="twitter:image" content="">
   
     <link rel="icon" href="favicon.ico">
-    <link href="https://melborp.s3.us-east-2.amazonaws.com/assets/css/app.css" rel="stylesheet">
+    <link href="https://asulado-cdn-mbp.s3.amazonaws.com/assets/css/app.css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/c43a2a9e8d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="as__header false">
   <nav>
-    <a class="as__logo" title="ASULADO" href="/"><img alt="asulado" loading="lazy" width="141" height="29" decoding="async" data-nimg="1" style="color: transparent" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/header_logo.svg"><span aria-hidden="true">Asulado</span><b>Seguros de vida</b></a><button id="open_menu" data-collapse-toggle="navbar-default" type="button" class="as__nav_button" aria-controls="navbar-default" aria-expanded="false">
+    <a class="as__logo" title="ASULADO" href="/"><img alt="asulado" loading="lazy" width="141" height="29" decoding="async" data-nimg="1" style="color: transparent" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/header_logo.svg"><span aria-hidden="true">Asulado</span><b>Seguros de vida</b></a><button id="open_menu" data-collapse-toggle="navbar-default" type="button" class="as__nav_button" aria-controls="navbar-default" aria-expanded="false">
       <span class="sr-only">Abrir menú</span><i class="fa-solid fa-bars text-xl"></i>
     </button>
     <div class="as__nav_links nav_close" id="navbar-default">
@@ -143,10 +143,10 @@
       </svg>
     </div>
     <div class="as__banner_left_int">
-      <image src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_nino.webp" alt="Asulado"></image>
+      <image src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_nino.webp" alt="Asulado"></image>
     </div>
     <div class="as__banner_left_int">
-      <image src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/svg_nino_mano.webp" alt="Asulado"></image>
+      <image src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/svg_nino_mano.webp" alt="Asulado"></image>
     </div>
   </div>
   <div class="as__banner_right">
@@ -221,7 +221,7 @@
     </div>
 
     <div class="as__banner_right_int">
-      <image src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_anciana.webp" alt="Asulado"></image>
+      <image src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_anciana.webp" alt="Asulado"></image>
     </div>
   </div>
 </section>
@@ -256,7 +256,7 @@
     <div class="as__marquee_to_left">Nuestro propósito</div>
   </div>
   <div class="as__proposito_ilus">
-    <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_proposito.png" alt="Asulado">
+    <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_proposito.png" alt="Asulado">
     <svg viewBox="0 0 1063 666" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M1041.76 666H21.2383C29.5646 491.686 317 352 531.5 352C746 352 1033.43 491.686 1041.76 666Z" fill="url(#paint0_linear_1974_90693)"></path>
       <path fillRule="evenodd" clipRule="evenodd" d="M563.134 377.35C563.134 377.35 562.754 382.287 562.564 385.135C562.374 387.983 560.285 390.072 560.855 391.591C561.425 393.11 566.941 394.688 572.058 395.009C575.287 395.212 583.871 398.483 594.845 398.427C601.52 398.393 598.459 393.597 593.895 390.262C590.643 387.885 586.461 387.381 585.16 387.034C576.616 384.755 576.046 379.628 576.046 379.628L563.134 377.35Z" fill="#A88DC1"></path>
@@ -308,7 +308,7 @@
       <div class="as__servicios_wrapper">
         <div class="as__servicios_item as_servicios_rent serv_renta">
           <div class="as__servicios_image img_renta">
-            <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_renta.png" alt="Renta Vitalicia">
+            <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_renta.png" alt="Renta Vitalicia">
           </div>
           <div class="as__servicios_content">
             <h2><span>Renta</span> <b>Vitalicia</b></h2>
@@ -328,7 +328,7 @@
 
         <div class="as__servicios_item as_servicios_prev serv_seguro">
           <div class="as__servicios_image img_seguro">
-            <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_seguro.png" alt="Seguro Previsional">
+            <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_seguro.png" alt="Seguro Previsional">
           </div>
           <div class="as__servicios_content">
             <h2><span>Seguro</span> <b>Previsional</b></h2>
@@ -359,17 +359,17 @@
       <h3 class="as__title_section">ASULADO en cifras</h3>
       <div class="as__cifras_content">
         <div class="as__cifras_content_cifra">
-          <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/ILUS1.png" alt="asulado">
+          <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/ILUS1.png" alt="asulado">
           <h4><span id="home_cifras_clientes"></span>k</h4>
           <p>clientes de Rentas Vitalicias</p>
         </div>
         <div class="as__cifras_content_cifra">
-          <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/ILUS2.png" alt="asulado">
+          <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/ILUS2.png" alt="asulado">
           <h4><span id="home_cifras_cobertura"></span>m</h4>
           <p>de cobertura de afiliados a través del Seguro Previsional</p>
         </div>
         <div class="as__cifras_content_cifra">
-          <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/ILUS3.png" alt="asulado">
+          <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/ILUS3.png" alt="asulado">
           <h4>+<span id="home_cifras_colaboradores"></span></h4>
           <p>colaboradores en nuestra red</p>
         </div>
@@ -401,9 +401,9 @@
           </div>
         </div>
         <div class="as__documentos_img">
-          <img class="img_doc_1" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_novedades_1.webp" alt="asulado">
-          <img class="img_doc_2" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_novedades_2.webp" alt="asulado">
-          <img class="img_doc_3" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/img_novedades_3.webp" alt="asulado">
+          <img class="img_doc_1" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_novedades_1.webp" alt="asulado">
+          <img class="img_doc_2" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_novedades_2.webp" alt="asulado">
+          <img class="img_doc_3" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/img_novedades_3.webp" alt="asulado">
         </div>
       </div>
     </div>
@@ -429,7 +429,7 @@
             at nisi iaculis, viverra enim venenatis, varius ante. Integer
           </p>
         </div>
-        <img alt="Asulado" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/blog/blog_1.jpg"></a>
+        <img alt="Asulado" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/blog/blog_1.jpg"></a>
     </li>
     <li class="as__post_small">
       <a href="/blog/5-consejos-para-aprovechar-el-seguro-previsional"><h4>¿Qué beneficios tengo con la renta vitalicia?</h4>
@@ -440,7 +440,7 @@
             at nisi iaculis, viverra enim venenatis, varius ante. Integer
           </p>
         </div>
-        <img alt="Asulado" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/blog/blog_2.jpg"></a>
+        <img alt="Asulado" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/blog/blog_2.jpg"></a>
     </li>
     <li class="as__post_small">
       <a href="/blog/5-consejos-para-aprovechar-el-seguro-previsional"><h4>Pensión de invalidez: todo lo que debes saber</h4>
@@ -451,7 +451,7 @@
             at nisi iaculis, viverra enim venenatis, varius ante. Integer
           </p>
         </div>
-        <img alt="Asulado" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/blog/blog_3.jpg"></a>
+        <img alt="Asulado" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/blog/blog_3.jpg"></a>
     </li>
     <li class="as__post_small">
       <a href="/blog/5-consejos-para-aprovechar-el-seguro-previsional"><h4>Preguntas frecuentes sobre la pensión vitalicia</h4>
@@ -462,7 +462,7 @@
             at nisi iaculis, viverra enim venenatis, varius ante. Integer
           </p>
         </div>
-        <img alt="Asulado" src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/blog/blog_4.jpg"></a>
+        <img alt="Asulado" src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/blog/blog_4.jpg"></a>
     </li>
   </ul>
 </section>
@@ -471,7 +471,7 @@
       </div>
     </div>
     <div class="as__header_vigilado">
-      <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/vigilado_vert.png" alt="Vigilado">
+      <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/vigilado_vert.png" alt="Vigilado">
     </div>
     <footer class="as__section as__footer">
   <div class="as__section_wrapper">
@@ -648,13 +648,13 @@
       </svg>
     </div>
     <div class="as__footer_legals">
-      <img src="https://melborp.s3.us-east-2.amazonaws.com/assets/images/vigilado.png" alt="asulado">
+      <img src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/images/vigilado.png" alt="asulado">
       <p>Todos los derechos reservados ASULADO SEGUROS DE VIDA S.A</p>
     </div>
   </div>
 </footer>
 
-    <script src="https://melborp.s3.us-east-2.amazonaws.com/assets/js/app.js"></script>
+    <script src="https://asulado-cdn-mbp.s3.amazonaws.com/assets/js/app.js"></script>
   </body>
 </html>
 
