--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,4 +1,4 @@
-<extends src="layout.html">
+<extends src="layout.html" locals='{ "id": "as__home", "top":"" }'>
   <block name="head">
     <title>ASULADO - INICIO</title>
 
