menu y renta_vitalicia

--- a/src/pages/renta_vitalicia/index.html
+++ b/src/pages/renta_vitalicia/index.html
@@ -60,6 +60,14 @@
       src="renta_vitalicia/gestion.html"
       locals='{ "bg":"bg-BG-1" }'
     ></include>
+    <include
+      src="renta_vitalicia/destacados.html"
+      locals='{ "bg":"bg-BG-1" }'
+    ></include>
+    <include
+      src="ayuda.html"
+      locals='{ "bg":"bg-gradient-to-b from-[#F4F9FC] to-[#E6F1F9]" }'
+    ></include>
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
