--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,43 +1,28 @@
 <extends src="layout.html" locals='{ "id": "as__home", "top":"" }'>
   <block name="head">
-    <title>ASULADO - INICIO</title>
+    <title>ASULADO Seguros de Vida</title>
 
-    <meta
-      name="title"
-      content="SaaS Tailwind | SaaS Web Template for Tailwind CSS"
-    />
+    <meta name="title" content="ASULADO Seguros de Vida" />
     <meta
       name="description"
-      content="SaaS Tailwind is a complete Tailwind CSS template crafted specially for SaaS, Software Mobile App and Web App Sites. Comes with all essential components and pages you need to kickstart your SaaS websites."
+      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://saas-tailwind.preview.uideck.com/"
-    />
-    <meta
-      property="og:title"
-      content="SaaS Tailwind | SaaS Web Template for Tailwind CSS"
-    />
+    <meta property="og:url" content="https://www.asulado.com/" />
+    <meta property="og:title" content="ASULADO Seguros de Vida" />
     <meta
       property="og:description"
-      content="SaaS Tailwind is a complete Tailwind CSS template crafted specially for SaaS, Software Mobile App and Web App Sites. Comes with all essential components and pages you need to kickstart your SaaS websites."
+      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
     <meta property="og:image" content="#" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://saas-tailwind.preview.uideck.com/"
-    />
-    <meta
-      property="twitter:title"
-      content="SaaS Tailwind | SaaS Web Template for Tailwind CSS"
-    />
+    <meta property="twitter:url" content="https://www.asulado.com/" />
+    <meta property="twitter:title" content="ASULADO Seguros de Vida" />
     <meta
       property="twitter:description"
-      content="SaaS Tailwind is a complete Tailwind CSS template crafted specially for SaaS, Software Mobile App and Web App Sites. Comes with all essential components and pages you need to kickstart your SaaS websites."
+      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
-    <meta property="twitter:image" content />
+    <meta property="twitter:image" content="" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
