--- a/src/pages/renta_vitalicia/index.html
+++ b/src/pages/renta_vitalicia/index.html
@@ -7,40 +7,40 @@
 
     <meta
       name="title"
-      content="SaaS Tailwind | SaaS Web Template for Tailwind CSS"
+      content="ASULADO Seguros de Vida"
     />
     <meta
       name="description"
-      content="SaaS Tailwind is a complete Tailwind CSS template crafted specially for SaaS, Software Mobile App and Web App Sites. Comes with all essential components and pages you need to kickstart your SaaS websites."
+      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://saas-tailwind.preview.uideck.com/"
+      content="https://www.asulado.com/"
     />
     <meta
       property="og:title"
-      content="SaaS Tailwind | SaaS Web Template for Tailwind CSS"
+      content="ASULADO Seguros de Vida"
     />
     <meta
       property="og:description"
-      content="SaaS Tailwind is a complete Tailwind CSS template crafted specially for SaaS, Software Mobile App and Web App Sites. Comes with all essential components and pages you need to kickstart your SaaS websites."
+      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
     <meta property="og:image" content="#" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://saas-tailwind.preview.uideck.com/"
+      content="https://www.asulado.com/"
     />
     <meta
       property="twitter:title"
-      content="SaaS Tailwind | SaaS Web Template for Tailwind CSS"
+      content="ASULADO Seguros de Vida"
     />
     <meta
       property="twitter:description"
-      content="SaaS Tailwind is a complete Tailwind CSS template crafted specially for SaaS, Software Mobile App and Web App Sites. Comes with all essential components and pages you need to kickstart your SaaS websites."
+      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
-    <meta property="twitter:image" content />
+    <meta property="twitter:image" content="https://www.asulado.com/" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
