--- a/src/pages/preguntas_frecuentes/index.html
+++ b/src/pages/preguntas_frecuentes/index.html
@@ -1,6 +1,6 @@
 <extends src="layout.html" locals='{ "id": "as__faqs", "top": "init" }'>
   <block name="head">
-    <title>ASULADO - GESTIÓN DE DOCUMENTOS</title>
+    <title>ASULADO - PREGUNTAS FRECUENTES</title>
 
     <meta name="title" content="ASULADO Seguros de Vida" />
     <meta
@@ -49,6 +49,34 @@
               "cls": "",
               "data": "1"
             }'
+            ></include>
+            <include
+              src="faqs/faq_3.html"
+              locals='{
+              "cls": "",
+              "data": "2"
+            }'
+            ></include>
+            <include
+              src="faqs/faq_4.html"
+              locals='{
+              "cls": "",
+              "data": "3"
+            }'
+            ></include>
+            <include
+              src="faqs/faq_5.html"
+              locals='{
+            "cls": "",
+            "data": "4"
+          }'
+            ></include>
+            <include
+              src="faqs/faq_6.html"
+              locals='{
+            "cls": "",
+            "data": "5"
+          }'
             ></include>
           </ul>
         </div>
